Cambios en el rol de administrador, en la seguridad y nuevas funcionalidades en la web